<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Asteroides</string>
    <string name="menu_settings">Settings</string>
    <string name="Arrancar">Jugar</string>
    <string name="Configurar">Configurar</string>
    <string name="Acercade">Acerca de </string>
    <string name="AcercadeTexto">Este programa ha sido desarrollado como ejemplo en el curso de Android para demostrar cómo se pueden lanzar nuevas actividades desde la actividad principal.</string>
    <string name="Puntuaciones">Puntuaciones</string>
    <string name="Puntuaciones_vacio">No hay puntuaciones</string>
    <string name="Salir">Salir</string>
    <string name="ToastHolaMundo">Hola Mundo!! ..by CRivera</string>
    <string name="Holamundo">Hola Mundo</string>
    <string name="config_musica">Se reproduce música de fondo</string>
    <string name="config_musica_reproducir">Reproducir música</string>
    <string name="config_config_graficos">Se escoge la representación de gráficos</string>
    <string name="config_config_graficos_tipo">Tipo de gráficos</string>
    <string name="config_fragmentos">En cuantos trozos se divide un asteroide</string>
    <string name="config_fragmentos_numero">Número de Fragmentos</string>
    <string name="puntuaciones_icono">Icono de la aplicación</string>
    <string name="puntuaciones_subtitulo_temporal">Texto temporal del subtítulo</string>
    
</resources>